the built-in contact form in the visual editor doesn't actually work with form detection, so just trash it. people can just email me, it's on the site anyway, who needs a form anyway. I could very well make a form work myself and handle the request but if I were doing that I wouldn't be using a static site generator that did all the annoying work for me, instead I would be building everything from scratch and hosting it on a server instance I manage myself because if I have to do the annoying parts I should also get to do the fun parts of doing everything from scratch

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -52,8 +52,8 @@
             },
             {
                 "type": "Link",
-                "label": "Contact",
-                "url": "mailto:thisismyemail.@myemail.me",
+                "label": "Email",
+                "url": "mailto:hannahdubusker@pm.me",
                 "altText": ""
             },
             {
